tried fixing issue with size of images(Pixelfed,Youtube)
I tried to minimize the issue that the Youtube and Pixelfed Logo having smalleer size than the others. I think it dicn't solve it. It look uglyer now Xd. Only temporary

--- a/style.css
+++ b/style.css
@@ -66,6 +66,14 @@ h1 {
     transition: all 1s;
 }
 
+.pixelfed:hover {
+    transform: scale(1.5);
+}
+
+.Youtube:hover {
+    transform: scale(1.5);
+}
+
 .profile-image:hover {
     opacity: 0.7;
     transform: scale(1.1);
